--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.5",
     "fabric": "^5.3.0",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.30.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.563.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
